[package]
name = "pam-ssh-agent-webauthn"
version = "0.2.0"
edition = "2021"
description = "PAM module for WebAuthn passkey-protected sudo via SSH agent forwarding"
license = "MIT"
repository = "https://github.com/rado0x54/pam-ssh-agent-webauthn"
homepage = "https://github.com/rado0x54/pam-ssh-agent-webauthn"
readme = "README.md"
keywords = ["pam", "webauthn", "ssh-agent", "fido2", "passkey"]
categories = ["authentication"]

[lib]
name = "pam_ssh_agent_webauthn"
crate-type = ["lib", "cdylib"]

[dependencies]
pam = { package = "pam-bindings", version = "0.1.1" }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
getrandom = "0.3"
log = "0.4"
syslog = "7"
libc = "0.2"

# Optional OpenSSL backend for FIPS environments
openssl = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.11"

[features]
native-crypto = ["dep:openssl"]
